# tedo

./: .gitignore  Cargo.toml  Justfile  README.md  design.md
src/: main.rs  notes.rs  projects.rs  storage.rs  tasks.rs  tedo.rs
