[package]
name = "tedo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0.2"
anyhow = "1.0.44"
tempfile = "3.7.1"


[dev-dependencies]
tempfile = "3.2.0"
